--- a/software.html
+++ b/software.html
@@ -32,7 +32,7 @@
 				  <li ><a id ="about" href="about">About me</a></li>
 				  <li ><a id ="research" href="research">Research</a></li>
 				  <li class = "active"><a id ="software" href="software">Software</a></li>
-				  <li ><a id ="contact" href="contact1">Contact</a></li>
+				  <li ><a id ="contact" href="contact">Contact</a></li>
 			</ul>
 			<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 			<script type = text/javascript>
@@ -82,7 +82,7 @@
 			<p align="justify">
 			
 			<ul>
-				<li> <a href="quickrmr.html"> QuickRMR </a>
+				<li> <a href="quickrmr"> QuickRMR </a>
 				<li> EasySMR (coming soon)
 				<li> GISMR (coming soon)				
 			</ul>
