--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 		<div id = "navbar">
 		 
 			<ul>
-				  <li ><a id ="home" href="index">Home</a></li>
+				  <li ><a id ="home" href="index">home</a></li>
 				  <li class = "active"><a id ="about" href="about">About me</a></li>
 				  <li ><a id ="research" href="research">Research</a></li>
 				  <li ><a id ="software" href="software">Software</a></li>
