--- a/quickrmr.html
+++ b/quickrmr.html
@@ -147,7 +147,7 @@
 			Jagadish Kundu <br> 
 			Department of Applied Geology <br>
 			IIT (ISM) Dhanbad, Jharkhand - 826004, India <br>
-			E-mail:	jagadishkundu92@gmail.com <br>
+			E-mail:	email@jkundu.com <br>
 		</p>
 		
 		</div>
