--- a/quickrmr.html
+++ b/quickrmr.html
@@ -106,7 +106,22 @@
 			Microsoft Access Database Engine <br> <br>
 			</ul>			
 			
-			The above requirements have been bundled with the installation setup.<br>	
+			The above requirements have been bundled with the installation setup.<br>
+			
+			<h1> Downloads </h1>
+			<p>
+			QuickRMR is an open source licensed <a https://www.gnu.org/licenses/gpl-3.0.en.html"> (GNU General Public License 3.0) </a>  
+			software which can can currently run on Windows OS. The software is programmed in Visual Studio using c# language.
+			</p>
+			
+			<ul>
+				<li> Download the .zip file containing the software here: <a https://www.dropbox.com/s/lemth5wzm0aat3v/QuickRMR_win.zip?dl=1"> QuickRMR_win </a> </li>
+				<li> Download the visual studio codes as a .zip file here: <a https://github.com/jagadishkundu/QuickRMR/zipball/master/"> QuickRMR_github </a> </li>
+				<li> Go to the github page containing repository here: <a https://github.com/jagadishkundu/QuickRMR/"> QuickRMR_github_page </a> </li>
+			
+			</ul> <br>
+			
+			
 			After successful installation, upon launching the program, the window should look like below image. The user can claculate RMR89 and RMR14 by clicking respective button.
 			
 			</p> <br> <br>
