--- a/quickrmr.html
+++ b/quickrmr.html
@@ -115,9 +115,9 @@
 			</p>
 			
 			<ul>
-				<li> Download the .zip file containing the software here: <a https://www.dropbox.com/s/lemth5wzm0aat3v/QuickRMR_win.zip?dl=1"> QuickRMR_win </a> </li>
-				<li> Download the visual studio codes as a .zip file here: <a https://github.com/jagadishkundu/QuickRMR/zipball/master/"> QuickRMR_github </a> </li>
-				<li> Go to the github page containing repository here: <a https://github.com/jagadishkundu/QuickRMR/"> QuickRMR_github_page </a> </li>
+				<li> Download the .zip file containing the software here: <a href="https://www.dropbox.com/s/lemth5wzm0aat3v/QuickRMR_win.zip?dl=1"> QuickRMR_win </a> </li>
+				<li> Download the visual studio codes as a .zip file here: <a href="https://github.com/jagadishkundu/QuickRMR/zipball/master/"> QuickRMR_github </a> </li>
+				<li> Go to the github page containing repository here: <a href="https://github.com/jagadishkundu/QuickRMR/"> QuickRMR_github_page </a> </li>
 			
 			</ul> <br>
 			
@@ -148,7 +148,7 @@
 			</p>
 			
 			<img src = "QuickRMR14.jpg" alt "QuickRMR_RMR14" class="imgcenter">
-			<p align = "center" class="caption"> User Interface of QuickRMR->RMR1 </p>
+			<p align = "center" class="caption"> User Interface of QuickRMR->RMR14 </p>
 			
 			
 			
