--- a/quickrmr.html
+++ b/quickrmr.html
@@ -70,7 +70,7 @@
 			<h3 align = "center", "justify" > Quick links </h3>
 			<p align = "justify"> 
 			Kundu et al. (2020) <br> <br>
-			<a href="https://github.com/jagadishkundu/templatemo_549_business_oriented/archive/master.zip"> QuickRMR </a>
+			<a href="https://www.dropbox.com/s/lemth5wzm0aat3v/QuickRMR_win.zip?dl=1"> Download QuickRMR </a>
 			</p>
 
 		</div>
@@ -116,8 +116,8 @@
 			
 			<ul>
 				<li> Download the .zip file containing the software here: <a href="https://www.dropbox.com/s/lemth5wzm0aat3v/QuickRMR_win.zip?dl=1"> QuickRMR_win </a> </li>
-				<li> Download the visual studio codes as a .zip file here: <a href="https://github.com/jagadishkundu/QuickRMR/zipball/master/"> QuickRMR_github </a> </li>
-				<li> Go to the github page containing repository here: <a href="https://github.com/jagadishkundu/QuickRMR/"> QuickRMR_github_page </a> </li>
+				<li> Download the visual studio codes as a .zip file here: <a href="https://github.com/jagadishkundu/QuickRMR/zipball/master/"> QuickRMR_VScode </a> </li>
+				<li> Go to the github page containing repository here: <a href="https://github.com/jagadishkundu/QuickRMR/"> QuickRMR_git_repository </a> </li>
 			
 			</ul> <br>
 			
