--- a/research.html
+++ b/research.html
@@ -70,7 +70,7 @@
 			<h3 align = "center", "justify" > Quick links </h3>
 			<p align = "justify"> 
 			Kundu et al. (2020) <br> <br>
-			<a href="https://github.com/jagadishkundu/templatemo_549_business_oriented/archive/master.zip"> QuickRMR </a>
+			<a href="https://www.dropbox.com/s/lemth5wzm0aat3v/QuickRMR_win.zip?dl=1"> Download QuickRMR </a>
 			</p>
 
 		</div>
