--- a/quickrmr.html
+++ b/quickrmr.html
@@ -76,7 +76,7 @@
 		</div>
 
 		<div class="main">
-			<h1 align = "center"> QuickRMR </h1>
+			<h1> QuickRMR </h1>
 				
 				<img src = "SplashScreen.jpg" alt "Tunnel portal" class="imgcenter">
 				<p align = "center" class="caption" > 
@@ -121,7 +121,17 @@
 			
 			</ul> <br>
 			
+			GNU GPL v3.0 gives you the freedom to use the software for personal, educational, commercial or any other purpose but, please do not foreget to cite.
+			<br>
+			Cite the software as: <br>
 			
+			Kundu, J., Sarkar, K., Singh, A.K., & Singh, T.N. (2020). QuickRMR beta. A Rock Mass Rating calculator based on continuous functions. https://jkundu.com/quickrmr (download date).
+			<br>
+			
+			Cite the article for continuous functions  used in the software as:
+			Kundu, J., Sarkar, K., Singh, A.K., & Singh, T.N. (inpress) Continuous functions and a computer application for rock mass rating. Int. J. Rock Mech. Min. Sci.
+
+			<br><br>
 			After successful installation, upon launching the program, the window should look like below image. The user can claculate RMR89 and RMR14 by clicking respective button.
 			
 			</p> <br> <br>
