--- a/quickrmr.html
+++ b/quickrmr.html
@@ -123,15 +123,15 @@
 			
 			GNU GPL v3.0 gives you the freedom to use the software for personal, educational, commercial or any other purpose but, please do not foreget to cite.
 			<br>
-			Cite the software as: <br>
+			Cite the software as: <br> <br>
 			
 			Kundu, J., Sarkar, K., Singh, A.K., & Singh, T.N. (2020). QuickRMR beta. A Rock Mass Rating calculator based on continuous functions. https://jkundu.com/quickrmr (download date).
 			<br>
 			
-			Cite the article for continuous functions  used in the software as:
+			Cite the article for continuous functions  used in the software as: <br><br>
 			Kundu, J., Sarkar, K., Singh, A.K., & Singh, T.N. (inpress) Continuous functions and a computer application for rock mass rating. Int. J. Rock Mech. Min. Sci.
 
-			<br><br>
+			<br><br><br>
 			After successful installation, upon launching the program, the window should look like below image. The user can claculate RMR89 and RMR14 by clicking respective button.
 			
 			</p> <br> <br>
