--- a/quickrmr.html
+++ b/quickrmr.html
@@ -160,7 +160,10 @@
 			<img src = "QuickRMR14.jpg" alt "QuickRMR_RMR14" class="imgcenter">
 			<p align = "center" class="caption"> User Interface of QuickRMR->RMR14 </p>
 			
-			
+			<br>
+			For details on the software operation, follow the user guide below.
+			<br>
+			<iframe src="User_Guide.pdf#toolbar=0" width="100%" height="500px">
 			
 
 
