--- a/quickrmr.html
+++ b/quickrmr.html
@@ -119,22 +119,22 @@
 				<li> Download the visual studio codes as a .zip file here: <a href="https://github.com/jagadishkundu/QuickRMR/zipball/master/"> QuickRMR_VScode </a> </li>
 				<li> Go to the github page containing repository here: <a href="https://github.com/jagadishkundu/QuickRMR/"> QuickRMR_git_repository </a> </li>
 			
-			</ul> <br>
+			</ul>
 			
 			GNU GPL v3.0 gives you the freedom to use the software for personal, educational, commercial or any other purpose but, please do not foreget to cite.
 			<br>
-			Cite the software as: <br> <br>
+			Cite the software as: <br>
 			
 			Kundu, J., Sarkar, K., Singh, A.K., & Singh, T.N. (2020). QuickRMR beta. A Rock Mass Rating calculator based on continuous functions. https://jkundu.com/quickrmr (download date).
-			<br> <br><br>
+			<br> <br>
 			
-			Cite the article for continuous functions  used in the software as: <br><br>
+			Cite the article for continuous functions  used in the software as: <br>
 			Kundu, J., Sarkar, K., Singh, A.K., & Singh, T.N. (inpress) Continuous functions and a computer application for rock mass rating. Int. J. Rock Mech. Min. Sci.
 
-			<br><br><br>
+			<br><br>
 			After successful installation, upon launching the program, the window should look like below image. The user can claculate RMR89 and RMR14 by clicking respective button.
 			
-			</p> <br> <br>
+			</p>
 			
 			
 			<img src = "QuickRMR_Front.jpg" alt "QuickRMR" class="imgcenter">
@@ -149,7 +149,7 @@
 			
 			<img src = "RMR89.jpg" alt "QuickRMR_RMR89" class="imgcenter">
 			<p align = "center" class="caption">
-			User Interface of QuickRMR->RMR89 </p> <br>
+			User Interface of QuickRMR->RMR89 </p>
 			
 			<p align="justify">	
 			
