--- a/quickrmr.html
+++ b/quickrmr.html
@@ -103,7 +103,7 @@
 			<ul>
 			.NET Framework 4.0 <br>
 			SQL Server Express LocalDB 2017 <br>
-			Microsoft Access Database Engine <br> <br>
+			Microsoft Access Database Engine <br>
 			</ul>			
 			
 			The above requirements have been bundled with the installation setup.<br>
@@ -122,7 +122,7 @@
 			</ul>
 			
 			GNU GPL v3.0 gives you the freedom to use the software for personal, educational, commercial or any other purpose but, please do not foreget to cite.
-			<br>
+			<br><br>
 			Cite the software as: <br>
 			
 			Kundu, J., Sarkar, K., Singh, A.K., & Singh, T.N. (2020). QuickRMR beta. A Rock Mass Rating calculator based on continuous functions. https://jkundu.com/quickrmr (download date).
@@ -163,7 +163,7 @@
 			<br>
 			For details on the software operation, follow the user guide below.
 			<br>
-			<iframe src="User_Guide.pdf#toolbar=0" width="100%" height="500px">
+			<iframe src="User_Guide.pdf#toolbar=0" width="100%" height="1000px">
 			
 
 
