--- a/quickrmr.html
+++ b/quickrmr.html
@@ -121,7 +121,7 @@
 			
 			</ul>
 			
-			GNU GPL v3.0 gives you the freedom to use the software for personal, educational, commercial or any other purpose but, please do not foreget to cite.
+			GNU GPL v3.0 gives you the freedom to use the software for personal, educational, commercial or any other purpose but, please do not forget to cite.
 			<br><br>
 			Cite the software as: <br>
 			
