--- a/quickrmr.html
+++ b/quickrmr.html
@@ -61,6 +61,8 @@
 			<h3 align = "center", "justify" > About Jagadish Kundu </h3>
 			<p align = "justify"> 
 			I am Currently a PhD student at IIT-ISM Dhanbad doing research in the field of engineering geology (slope stability and landslides).
+			<br>	
+			Contact me at email@jkundu.com	
 			</p>
 
 		</div>
@@ -163,7 +165,7 @@
 			<br>
 			For details on the software operation, follow the user guide below.
 			<br>
-			<iframe src="User_Guide.pdf#toolbar=0" width="100%" height="1000px">
+			<iframe src="User_Guide.pdf" width="100%" height="1000px">
 			
 
 
