--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,10 @@
 		
 			<h3 align = "center", "justify" > About Jagadish Kundu </h3>
 			<p align = "justify"> 
+			
 			I am Currently a PhD student at IIT-ISM Dhanbad doing research in the field of engineering geology (slope stability and landslides).
+			<br>	
+			Contact me at email@jkundu.com
 			</p>
 
 		</div>
