--- a/quickrmr.html
+++ b/quickrmr.html
@@ -62,7 +62,7 @@
 			<p align = "justify"> 
 			I am Currently a PhD student at IIT-ISM Dhanbad doing research in the field of engineering geology (slope stability and landslides).
 			<br> <br>			
-			Contact me: <a href="email@jkundu.com"> email@jkundu.com</a>
+			Contact me: <a href=""> email@jkundu.com</a>
 			</p>
 
 		</div>
