--- a/quickrmr.html
+++ b/quickrmr.html
@@ -164,10 +164,11 @@
 			
 			<br>
 			For details on the software operation, follow the user guide below.
-			<br>
+			<br> <br>
 			<iframe src="User_Guide.pdf" width="100%" height="1000px">
 			
-
+		<br> <br>Hope you enjoy using the software! I would love to receive your feedback at <a href=""> email@jkundu.com</a>. 
+				Your comments/suggestions are valueable to improve the software.
 
 		</div>
 	
