--- a/contact.html
+++ b/contact.html
@@ -63,8 +63,8 @@
 			<p align = "justify"> 
 			
 			I am Currently a PhD student at IIT-ISM Dhanbad doing research in the field of engineering geology (slope stability and landslides).
-			<br>	
-			Contact me at email@jkundu.com
+			<br> <br>			
+			Contact me: <a href=""> email@jkundu.com</a>
 			</p>
 
 		</div>
