--- a/software.html
+++ b/software.html
@@ -62,8 +62,8 @@
 			<h3 align = "center", "justify" > About Jagadish Kundu </h3>
 			<p align = "justify"> 
 			I am Currently a PhD student at IIT-ISM Dhanbad doing research in the field of engineering geology (slope stability and landslides).
-			<br>	
-			Contact me at email@jkundu.com
+			<br> <br>			
+			Contact me: <a href=""> email@jkundu.com</a>
 			
 			</p>
 
