--- a/quickrmr.html
+++ b/quickrmr.html
@@ -165,7 +165,7 @@
 			<br>
 			For details on the software operation, follow the user guide below.
 			<br> <br>
-			<iframe src="User_Guide.pdf" width="100%" height="1000px">
+			<iframe src="User_Guide.pdf" width="100%" height="1000px"> </iframe>
 			
 		<br> <br>Hope you enjoy using the software! I would love to receive your feedback at <a href=""> email@jkundu.com</a>. 
 				Your comments/suggestions are valueable to improve the software.
