--- a/quickrmr.html
+++ b/quickrmr.html
@@ -168,7 +168,7 @@
 			<iframe src="User_Guide.pdf" width="100%" height="1000px"> </iframe>
 			
 		<br> <br>Hope you enjoy using the software! I would love to receive your feedback at <a href=""> email@jkundu.com</a>. 
-				Your comments/suggestions are valueable to make it more convenient and error free.
+				Your comments/suggestions are valuable to make it more convenient and error free.
 
 		</div>
 	
