--- a/contact.html
+++ b/contact.html
@@ -117,8 +117,8 @@
 				
 			  <script type = "text/javascript">
 			  $ ('#gform').on('submit', function(e){
-			  $ ('#gform *').fadeout(2000);
-			  $ ('#gform').prepend ('Your messsage has been sent.');
+			  $ ('#gform *').fadeOut(200);
+			  $ ('#gform').prepend ('Your messsage has been sent. Thank You!');
 			  });
 			  
 			  </script>
