--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 <title> Contact </title>
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
 
-		<meta name="Description" content="Personal website of Jagadish Kundu which contains his Research work and publications. Also to access the softwares like QuickRMR, EasySMR and GISMR, developed by developed by Jagadish Kundu."/>
+		<meta name="Description" content="Jagadish Kundu has developed QuickRMR for Rock Mass Rating (RMR), EasySMR for Slope Mass Rating (SMR) and GISMR. E-mail: email@jkundu.com"/>
 		<meta name="keywords" content="RMR, SMR, QuickRMR, Easysmr, GISMR, Jagadish Kundu"/>
 		<meta http-equiv="authors" content = "Jagadish Kundu"/>
 		<meta http-equiv="content-language" content = "en-uk"/>
