--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 <title> About me </title>
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
 
-		<meta name="Description" content="Jagadish Kundu has developed QuickRMR for Rock Mass Rating (RMR), EasySMR for Slope Mass Rating (SMR) and GISMR."/>
+		<meta name="Description" content="QuickRMR computer application/software for Rock Mass Rating (RMR) continuous functions, Kundu et al. (2020) EasySMR for Slope Mass Rating (SMR) and GISMR (Kinematic analysis and SMR in GIS using Digital Elevation Model - DEM) by Jagadish Kundu."/>
 		<meta name="keywords" content="RMR, SMR, QuickRMR, Easysmr, GISMR, Jagadish Kundu"/>
 		<meta http-equiv="authors" content = "Jagadish Kundu"/>
 		<meta http-equiv="content-language" content = "en-uk"/>
