--- a/quickrmr.html
+++ b/quickrmr.html
@@ -51,7 +51,7 @@
 		<div class="sideright">
 			<h3 align = "center", "justify" > About this page </h3>
 			<p align = "justify"> 
-			Here is the descriptin of the software QuickRMR and the link to download it for free. <br> <br>
+			Here is the description of the software QuickRMR and the link to download it for free. <br> <br>
 			</p>
 
 		</div>
@@ -70,8 +70,9 @@
 		<div class="sideright">
 		
 			<h3 align = "center", "justify" > Quick links </h3>
-			<p align = "justify"> 
-			Kundu et al. (2020) <br> <br> 
+			<p align = "justify">
+			<a href="https://authors.elsevier.com/c/1amX04sPjBg0DD"> Kundu et al. (2020) </a>
+			<br> <br> 
 			<a href="https://www.dropbox.com/s/lemth5wzm0aat3v/QuickRMR_win.zip?dl=1"> Download QuickRMR </a>
 			</p>
 
@@ -131,7 +132,7 @@
 			<br> <br>
 			
 			Cite the article for continuous functions  used in the software as: <br>
-			Kundu, J., Sarkar, K., Singh, A.K., & Singh, T.N. (inpress) Continuous functions and a computer application for rock mass rating. Int. J. Rock Mech. Min. Sci.
+			Kundu, J., Sarkar, K., Singh, A.K., & Singh, T.N. (2020) Continuous functions and a computer application for rock mass rating. Int. J. Rock Mech. Min. Sci.
 
 			<br><br>
 			After successful installation, upon launching the program, the window should look like below image. The user can claculate RMR89 and RMR14 by clicking respective button.
