--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
 		
 			<h3 align = "center", "justify" > Quick links </h3>
 			<p align = "justify"> 
-			Kundu et al. (2020) <br> <br>
+			<a href="https://authors.elsevier.com/c/1amX04sPjBg0DD"> Kundu et al. (2020) </a> <br> <br>
 			<a href="https://www.dropbox.com/s/lemth5wzm0aat3v/QuickRMR_win.zip?dl=1"> Download QuickRMR </a>
 			</p>
 
