--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
 			
 			<img src = "SplashScreen.jpg" alt "Tunnel portal" class="imgcenter">
 			<p align = "center" class="caption" > 
-			Rock mass at a tunnel portal containing 
-			diverse lithological and structural condition. 
-			The portal has been partially installed with support systems. 
-			(Photo credit: Dr. Harsh K. Verma, Sr. Scientist, CSIR-CIMFR) 
+				Rock mass conditions at a twin tunnel portal with 
+				diverse lithological and structural characteristics. 
+				The portal slopes have been been stabilized with support systems. 
+				(Photo credit: Dr. Harsh K. Verma, Principal Scientist, CSIR-CIMFR) 
 			</p>
 			<img src = "QuickRMR89.jpg" alt "QuickRMR_RMR89 User Interface" class="imgcenter">
 			<p align = "center" class="caption"> User Interface of RMR89 in QuickRMR application </p>
