--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 		<div class="sideright">
 			<h3 align = "center", "justify" > About Jagadish Kundu </h3>
 			<p align = "justify"> 
-			I am Currently a PhD student at IIT-ISM Dhanbad doing research in the field of engineering geology (slope stability and landslides).
+			Jagadish Kundu is Currently a PhD student at IIT-ISM Dhanbad doing research in the field of engineering geology (slope stability and landslides).
 			<br> <br>			
-			Contact me: <a href=""> email@jkundu.com</a>
+			Contact Jagadish: <a href=""> email@jkundu.com</a>
 			</p>
 
 		</div>
@@ -81,18 +81,20 @@
 		<div class="main">
 
 			<p align="justify">
+			<h3> Continuous functions and a computer application for Rock Mass Rating </h3>
 			Jagadish Kundu, Kripamoy Sarkar, Ashok Kumar Singh, T.N. Singh, (2020)
 			Continuous functions and a computer application for Rock Mass Rating,
 			International Journal of Rock Mechanics and Mining Sciences,
-			Volume 129
+			Volume 129 
 			
+			<br>
 			<a href="https://authors.elsevier.com/c/1amX04sPjBg0DD"> Access the article here </a> <br> <br>
 				
 			Abstract: Rock Mass Rating (RMR) is a widely used rock mass classification system to assess the quality/condition of rock masses for tunnels, mines, slopes and foundations. The RMR system has been successfully practiced for more than four decades in the civil and rock engineering projects worldwide. Even though RMR is responsive, economic and adaptive, it needs expert judgement for the accurate rating due to subjectivity involved in each parameter. This paper proposes continuous functions for the lump ratings of each parameter in the two frequently used versions of RMR, i.e. RMR89 and RMR14. These continuous functions enable less experienced personnel to determine the RMR at high accuracy. Roughness and weathering are two sub-parameters in the RMR system, which are defined descriptively lacking proper quantification. We have adopted the Joint Roughness Coefficient and *I5 index (indices of surface weakening) to quantify the roughness and weathering parameters respectively so that continuous functions could be proposed for discrete ratings. To check the accuracy of the proposed continuous functions, we have analysed 71 case studies for RMR89 and 22 case studies for RMR14 from different parts of the Indian Himalayan region. Moreover, a windows application with a graphic user interface, named “QuickRMR”, has been developed to calculate RMR89 and RMR14 using the proposed continuous functions. The software is freely available under GNU GPL 3.0 open-source license. The QuickRMR has additional advantages as it indicates the limitations and errors in the input values, calculates and stores RMR data for multiple locations and export the results of all location in one excel file for report generation and further processing.
 			<br> Keywords: Rock mass classification; RMR; Continuous functions; Computer application; QuickRMR
 			</p>
 			
-			<h1> The QuickRMR Application </h1>
+			<h3> The QuickRMR Application </h3>
 
 			<p align="justify">
 			'QuickRMR' is a windows computer program and has been developed to 
