--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<p align = "justify"> 
 			Jagadish Kundu is Currently a PhD student at IIT-ISM Dhanbad doing research in the field of engineering geology (slope stability and landslides).
 			<br> <br>			
-			Contact Jagadish: <a href=""> email@jkundu.com</a>
+			Contact: <a href=""> email@jkundu.com</a>
 			</p>
 
 		</div>
