--- a/about.html
+++ b/about.html
@@ -59,9 +59,9 @@
 		
 			<h3 align = "center", "justify" > About Jagadish Kundu </h3>
 			<p align = "justify"> 
-			I am Currently a PhD student at IIT-ISM Dhanbad doing research in the field of engineering geology (slope stability and landslides).
+			Jagadish Kundu is Currently a PhD student at IIT-ISM Dhanbad doing research in the field of engineering geology (slope stability and landslides).
 			<br> <br>			
-			Contact me: <a href=""> email@jkundu.com</a>
+			Contact: <a href=""> email@jkundu.com</a>
 			</p>
 
 		</div>
@@ -81,12 +81,12 @@
 			<h1> About me </h1>
 
 			<p align="justify">
-			I am a PhD student at Indian Institute of Technology (ISM) Dhanbad,
+			Jagadish Kundu is a PhD student at Indian Institute of Technology (ISM) Dhanbad,
 			doing research in the field of Engineering Geology, specifically related to slope stability and landslides. 
-			However, I am also interested in rock mechanics.
+			However, he is also interested in rock mechanics.
 			
-			I am aimed at understanding the mechanism of Earth-mass behaviour and applying the knowledge for detection 
-			and remediation of mass movements. I am also interested in developing tools and techniques to solve or ease 
+			He is aimed at understanding the mechanism of Earth-mass behaviour and applying the knowledge for detection 
+			and remediation of mass movements. He is also interested in developing tools and techniques to solve or ease 
 			the difficulties related to engineering constructions in earth mass.
 				 
 			</p>
