--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
 
 		<div class="main">
 		
-			<h1> About me </h1>
+			<h3> About Jagadish Kundu </h3>
 
 			<p align="justify">
 			Jagadish Kundu is a PhD student at Indian Institute of Technology (ISM) Dhanbad,
