--- a/research.html
+++ b/research.html
@@ -80,13 +80,13 @@
 		
 
 		<div class="main">
-			<h1> Publications </h1>
+			<h3> Publications </h3>
 
 			<p align="justify">
 			
 			<ul>
 			<h4> Articles in Journals </h4>
-				<li>Kundu, J., Sarkar, K., Singh, A.K., & Singh, T., 2020. Continuous functions and a computer application for rock mass rating. Int. J. Rock Mech. Min. Sci. (Accepted).
+				<li>Kundu, J., Sarkar, K., Singh, A.K., & Singh, T., 2020. Continuous functions and a computer application for rock mass rating. Int. J. Rock Mech. Min. Sci. 129.
 				<li>Singh, A.K., Kundu, J., & Sarkar, K., 2018. Stability analysis of a recurring soil slope failure along NH-5, Himachal Himalaya, India. Nat. Hazards 90, 863–885.
 				<li>Kundu, J., Mahanta, B., Sarkar, K., & Singh, T.N., 2018. The Effect of Lineation on Anisotropy in Dry and Saturated Himalayan Schistose Rock Under Brazilian Test Conditions. Rock Mech. Rock Eng. 51, 5–21.
 				<li>Kundu, J., Sarkar, K., Singh, P.K., & Singh, T.N., 2018. Deterministic and Probabilistic Stability Analysis of Soil Slope – A Case Study. J. Geol. Soc. India 91, 418–424.
