--- a/software.html
+++ b/software.html
@@ -61,9 +61,9 @@
 		
 			<h3 align = "center", "justify" > About Jagadish Kundu </h3>
 			<p align = "justify"> 
-			I am Currently a PhD student at IIT-ISM Dhanbad doing research in the field of engineering geology (slope stability and landslides).
+			Jagadish Kundu is Currently a PhD student at IIT-ISM Dhanbad doing research in the field of engineering geology (slope stability and landslides).
 			<br> <br>			
-			Contact me: <a href=""> email@jkundu.com</a>
+			Contact: <a href=""> email@jkundu.com</a>
 			
 			</p>
 
