--- a/research.html
+++ b/research.html
@@ -51,7 +51,7 @@
 		<div class="sideright">
 			<h3 align = "center", "justify" > About this page </h3>
 			<p align = "justify"> 
-			This page lists my publications in international and national journals, and conferences.
+			This page lists publications of Jagadish Kundu in international and national journals, and conferences.
 			</p>
 
 		</div>
@@ -60,10 +60,10 @@
 		
 			<h3 align = "center", "justify" > About Jagadish Kundu </h3>
 			<p align = "justify"> 
-			I am Currently a PhD student at IIT-ISM Dhanbad doing research in the field of engineering geology (slope stability and landslides).
+			Jagadish Kundu is Currently a PhD student at IIT-ISM Dhanbad doing research in the field of engineering geology (slope stability and landslides).
 			
 			<br> <br>			
-			Contact me: <a href=""> email@jkundu.com</a>
+			Contact: <a href=""> email@jkundu.com</a>
 			</p>
 
 		</div>
