--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 		<div class="sideright">
 			<h3 align = "center", "justify" > About this page </h3>
 			<p align = "justify"> 
-			Wnat to comment, request, any proposal or others?
+			Want to comment, request, any proposal or others?
 			Send me a message by filling out the details in the form.
 			</p>
 
