--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 		<div class="sideright">
 			<h3 align = "center", "justify" > About this website </h3>
 			<p align = "justify"> 
-			The purpose of this website is to share my research and other relevant informations regarding my academic career. The website also serves as my curriculum vita. 
-			<br> <br> This page contains recent updates regarding my work and publications.
+			The purpose of this website is to share research and other relevant informations of Jagadish Kundu, regarding academic career. The website also serves as a curriculum vita. 
+			<br> <br> This page contains recent updates regarding his work and publications.
 			</p>
 
 		</div>
