--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<div class="sideright">
 			<h3 align = "center", "justify" > About this website </h3>
 			<p align = "justify"> 
-			The purpose of this website is to share research and other relevant informations of Jagadish Kundu, regarding academic career. The website also serves as a curriculum vita. 
+			The purpose of this website is to share research and other relevant informations of Jagadish Kundu, regarding his academic career. The website also serves as a curriculum vita. 
 			<br> <br> This page contains recent updates regarding his work and publications.
 			</p>
 
