--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 		<div class="sideright">
 			<h3 align = "center", "justify" > About this page </h3>
 			<p align = "justify"> 
-			This page introduces me and outlines my academic career and achievements.
+			This page introduces Jagadish Kundu and outlines his academic career and achievements.
 			</p>
 
 		</div>
