--- a/about.html
+++ b/about.html
@@ -81,13 +81,13 @@
 			<h3> About Jagadish Kundu </h3>
 
 			<p align="justify">
-			Jagadish Kundu is a PhD student at Indian Institute of Technology (ISM) Dhanbad,
-			doing research in the field of Engineering Geology, specifically related to slope stability and landslides. 
-			However, he is also interested in rock mechanics.
+			Jagadish Kundu is currently pursuing PhD at Indian Institute of Technology (ISM) Dhanbad.
+			His research interest lies in the field of Engineering Geology, specifically related to slope stability and landslides. 
+			However, he is also working in field of rock mechanics and interested in rock anisotropy.
 			
 			He is aimed at understanding the mechanism of Earth-mass behaviour and applying the knowledge for detection 
-			and remediation of mass movements. He is also interested in developing tools and techniques to solve or ease 
-			the difficulties related to engineering constructions in earth mass.
+			and remediation of mass movements. He has a keen interest in developing tools and techniques to solve or ease 
+			the difficulties related to engineering constructions in Earth-mass.
 				 
 			</p>
 
