--- a/quickrmr.html
+++ b/quickrmr.html
@@ -3,7 +3,7 @@
 <html>
  
 <head>
-<title> QuickRMR </title>
+<title> QuickRMR: A Rock Mass Rating (RMR) calculator based on continuous functions </title>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css">
 
 		<meta name="Description" content="QuickRMR computer application/software for Rock Mass Rating (RMR) continuous functions, Kundu et al. (2020) EasySMR for Slope Mass Rating (SMR) and GISMR (Kinematic analysis and SMR in GIS using Digital Elevation Model - DEM) by Jagadish Kundu."/>
@@ -86,13 +86,13 @@
 				Rock mass conditions at a twin tunnel portal with 
 				diverse lithological and structural characteristics. 
 				The portal slopes have been been stabilized with support systems. 
-				(Photo credit: Dr. Harsh K. Verma, Principal Scientist, CSIR-CIMFR) 
+				(Photo credit: Dr. Harsh K. Verma, Pr Scientist and HOS at CSIR-CIMFR Bilaspur) 
 				</p>
 			<p align="justify">
 			'QuickRMR' is a windows computer program and has been developed to 
-			calculate both RMR89 and RMR14 using the new continuous functions 
-			proposed by Kundu et al. (2020). This computer program aims at making 
-			the RMR determination automatic, easy and convenient. The program is 
+			to ease the calculation of both RMR89 and RMR14 using the new continuous functions 
+			proposed by <a href="https://authors.elsevier.com/c/1amX04sPjBg0DD"> Kundu et al. (2020) </a>. This computer program aims at making 
+			the RMR calculation automatic, easy and convenient. The program is 
 			freely available and is distributed under an open-source license 
 			(GNU General Public License 3.0). The user
 			can calculate, store, update and delete RMR data for several locations 
@@ -124,7 +124,7 @@
 			
 			</ul>
 			
-			GNU GPL v3.0 gives you the freedom to use the software for personal, educational, commercial or any other purpose but, please do not forget to cite.
+			GNU GPL v3.0 gives you the freedom to use the software for personal, educational, or commercial purposes but, please do not forget to cite.
 			<br><br>
 			Cite the software as: <br>
 			
