--- a/quickrmr.html
+++ b/quickrmr.html
@@ -3,7 +3,7 @@
 <html>
  
 <head>
-<title> QuickRMR: A Rock Mass Rating (RMR) calculator based on continuous functions </title>
+<title> QuickRMR </title>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css">
 
 		<meta name="Description" content="QuickRMR computer application/software for Rock Mass Rating (RMR) continuous functions, Kundu et al. (2020) EasySMR for Slope Mass Rating (SMR) and GISMR (Kinematic analysis and SMR in GIS using Digital Elevation Model - DEM) by Jagadish Kundu."/>
@@ -79,7 +79,7 @@
 		</div>
 
 		<div class="main">
-			<h1> QuickRMR </h1>
+			<h1> QuickRMR: A Rock Mass Rating (RMR) calculator based on continuous functions </h1>
 				
 				<img src = "SplashScreen.jpg" alt "Tunnel portal" class="imgcenter">
 				<p align = "center" class="caption" > 
@@ -91,7 +91,7 @@
 			<p align="justify">
 			'QuickRMR' is a windows computer program and has been developed to 
 			to ease the calculation of both RMR89 and RMR14 using the new continuous functions 
-			proposed by <a href="https://authors.elsevier.com/c/1amX04sPjBg0DD"> Kundu et al. (2020) </a>. This computer program aims at making 
+			proposed by <a href="https://authors.elsevier.com/c/1amX04sPjBg0DD">Kundu et al. (2020)</a>. This computer program aims at making 
 			the RMR calculation automatic, easy and convenient. The program is 
 			freely available and is distributed under an open-source license 
 			(GNU General Public License 3.0). The user
