--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 				Rock mass conditions at a twin tunnel portal with 
 				diverse lithological and structural characteristics. 
 				The portal slopes have been been stabilized with support systems. 
-				(Photo credit: Dr. Harsh K. Verma, Principal Scientist, CSIR-CIMFR) 
+				(Photo credit: Dr. Harsh K. Verma, Pr Scientist and HOS at CSIR-CIMFR Bilaspur) 
 			</p>
 			<img src = "QuickRMR89.jpg" alt "QuickRMR_RMR89 User Interface" class="imgcenter">
 			<p align = "center" class="caption"> User Interface of RMR89 in QuickRMR application </p>
