--- a/quickrmr.html
+++ b/quickrmr.html
@@ -132,7 +132,7 @@
 			<br> <br>
 			
 			Cite the article for continuous functions  used in the software as: <br>
-			Kundu, J., Sarkar, K., Singh, A.K., & Singh, T.N. (2020) Continuous functions and a computer application for rock mass rating. Int. J. Rock Mech. Min. Sci.
+			Kundu, J., Sarkar, K., Singh, A.K., & Singh, T.N. (2020) Continuous functions and a computer application for rock mass rating. Int. J. Rock Mech. Min. Sci. 129.
 
 			<br><br>
 			After successful installation, upon launching the program, the window should look like below image. The user can claculate RMR89 and RMR14 by clicking respective button.
