--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 		
 			<h3 align = "center", "justify" > About Jagadish Kundu </h3>
 			<p align = "justify"> 
-			Jagadish Kundu is a doctorate in Engineering Geologyt from IIT-ISM Dhanbad, India. 
+			Jagadish Kundu is a doctorate in Engineering Geologyt from IIT-ISM Dhanbad, India. His research interest lies in the field of in the field of slope stability, landslides and underground excavation. 
 			<br> <br>			
 			Contact: <a href=""> email@jkundu.com</a>
 			</p>
@@ -81,8 +81,8 @@
 			<h3> About Jagadish Kundu </h3>
 
 			<p align="justify">
-			Jagadish Kundu is a doctorate in Engineering Geologyt from IIT-ISM Dhanbad, India. 
-			His thrust research areas are interdisciplinary and mostly in the field of slope stability, landslide and underground excavations. 
+			Jagadish Kundu is a doctorate in Engineering Geology from IIT-ISM Dhanbad, India. 
+			His thrust research areas are interdisciplinary in nature, mostly in the field of slope stability, landslide and underground excavations. 
 			However, he is also working in the field of rock mechanics and rock anisotropy.
 			
 			He is aimed at understanding the mechanism of Earth-mass behaviour and applying the knowledge for detection 
