--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 		
 			<h3 align = "center", "justify" > About Jagadish Kundu </h3>
 			<p align = "justify"> 
-			Jagadish Kundu is a doctorate in Engineering Geologyt from IIT-ISM Dhanbad, India. His research interest lies in the field of in the field of slope stability, landslides and underground excavation. 
+			Jagadish Kundu is a doctorate in Engineering Geologyt from IIT-ISM Dhanbad, India. His research interests lie in the field of in the field of slope stability, landslides and underground excavation. 
 			<br> <br>			
 			Contact: <a href=""> email@jkundu.com</a>
 			</p>
