--- a/research.html
+++ b/research.html
@@ -60,7 +60,7 @@
 		
 			<h3 align = "center", "justify" > About Jagadish Kundu </h3>
 			<p align = "justify"> 
-			Jagadish Kundu is Currently a PhD student at IIT-ISM Dhanbad doing research in the field of engineering geology (slope stability and landslides).
+			Jagadish Kundu is a doctorate in Engineering Geology from IIT-ISM Dhanbad, India. His research interests lie in the field of in the field of slope stability, landslides and underground excavation.
 			
 			<br> <br>			
 			Contact: <a href=""> email@jkundu.com</a>
@@ -86,6 +86,7 @@
 			
 			<ul>
 			<h4> Articles in Journals </h4>
+				<li>1.	Singh AK, Kundu J, Sarkar K, Verma HK, Singh PK (2021) Impact of rock block characteristics on rockfall hazard and its implications for rockfall protection strategies along Himalayan highways: A case study. Bulletin of Engineering Geology and the Environment. (Accepted)
 				<li>Kundu, J., Sarkar, K., Singh, A.K., & Singh, T., 2020. Continuous functions and a computer application for rock mass rating. Int. J. Rock Mech. Min. Sci. 129. <br> <a href="https://authors.elsevier.com/c/1amX04sPjBg0DD"> Access here </a> <br> <br>
 				<li>Singh, A.K., Kundu, J., & Sarkar, K., 2018. Stability analysis of a recurring soil slope failure along NH-5, Himachal Himalaya, India. Nat. Hazards 90, 863–885.
 				<li>Kundu, J., Mahanta, B., Sarkar, K., & Singh, T.N., 2018. The Effect of Lineation on Anisotropy in Dry and Saturated Himalayan Schistose Rock Under Brazilian Test Conditions. Rock Mech. Rock Eng. 51, 5–21.
