--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
 			<ul>
 				<li>Processes involved in landslide, debris slide, rock fall and their detection
 				<li>Detection of landside prone zones in regional area as well as site specific studies
-				<li>Implicaton of photogrammetry and point cloud techniques in solving slope stability problems
+				<li>Implication of photogrammetry and point cloud techniques to solve stability problems in hill slopes
 				<li>Improvements to Rock Mass Characterization systems
 				<li>Strength and fracture behaviour of planar anisotropic rocks	
 				<li>Rock mechanics, rock discontinuity behaviour				
