--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div id = "header">
 			<img src = "myphoto.jpg" alt "Jagadish Kundu">
 			<h1> Jagadish Kundu <br> </h1>
-			<p>	PhD Student (Engineering geology)<br>
+			<p>	PhD (Engineering geology)<br>
 					IIT-ISM Dhanbad </p>
 		
 		</div>
