--- a/research.html
+++ b/research.html
@@ -18,7 +18,7 @@
 		<div id = "header">
 			<img src = "myphoto.jpg" alt "Jagadish Kundu">
 			<h1> Jagadish Kundu <br> </h1>
-			<p>	PhD (Engineering geology)<br>
+			<p>	PhD (Engineering Geology)<br>
 					IIT-ISM Dhanbad </p>
 		
 		</div>
