--- a/about.html
+++ b/about.html
@@ -70,8 +70,11 @@
 		
 			<h3 align = "center", "justify" > Quick links </h3>
 			<p align = "justify"> 
-			<a href="https://authors.elsevier.com/c/1amX04sPjBg0DD"> Kundu et al. (2020) </a> <br> <br>
+			<a href="https://authors.elsevier.com/c/1amX04sPjBg0DD"> Kundu et al. (2020) </a> 
+			<br> <br>
 			<a href="https://www.dropbox.com/s/lemth5wzm0aat3v/QuickRMR_win.zip?dl=1"> Download QuickRMR </a>
+			<br> <br> 
+			<a href="https://www.dropbox.com/s/r15kvj4wy3dqy7c/EasySMR_win.exe?dl=1"> Download EasySMR </a>
 			</p>
 
 		</div>
