--- a/index.html
+++ b/index.html
@@ -76,12 +76,37 @@
 			<br> <br>
 			<a href="https://www.dropbox.com/s/lemth5wzm0aat3v/QuickRMR_win.zip?dl=1"> Download QuickRMR </a>
 			<br> <br> 
-			<a href="https://www.dropbox.com/s/r15kvj4wy3dqy7c/EasySMR_win.exe?dl=1"> Download EasySMR </a>
+			<a href="https://link.springer.com/epdf/10.1007/s10064-021-02524-8?sharing_token=XHHlveN8YFvDziSMfEGaFfe4RwlQNchNByi7wbcMAY4UTOrRuw_Sk7b31BvNnQRKERjI8tjsFlfhKfpfSem96Jbbqy6n8nOLVnf5ex77O1sl-69QMsg0P4D4Ad-Wd--af-dP_NhU7d63zs_XbSjbRcrCullfSLsqzQk3hCeAtCI%3D"> Kundu et al. (2022) </a>
+			<br> <br> 
+			<a href="https://www.dropbox.com/s/kxrle2kqb1kf5ko/EasySMR_win.exe?dl=1"> Download EasySMR </a>
 			</p>
 
 		</div>
 
 		<div class="main">
+
+			<p align="justify">
+			<h3> Quantitative analysis of kinematic stability and slope mass rating with the help of <a href="https://jkundu.com/easysmr"> EasySMR </a> </h3>
+			Kundu J, Sarkar K, Verma AK, Singh TN (2022) Novel methods for quantitative analysis of kinematic stability and slope mass rating in jointed rock slopes with the aid of a new computer application. Bull Eng Geol Environ 81, 29.
+			
+			<br>
+			<a href="https://link.springer.com/epdf/10.1007/s10064-021-02524-8?sharing_token=XHHlveN8YFvDziSMfEGaFfe4RwlQNchNByi7wbcMAY4UTOrRuw_Sk7b31BvNnQRKERjI8tjsFlfhKfpfSem96Jbbqy6n8nOLVnf5ex77O1sl-69QMsg0P4D4Ad-Wd--af-dP_NhU7d63zs_XbSjbRcrCullfSLsqzQk3hCeAtCI%3D"> Access the article here </a> <br> <br>
+			</p>
+			
+			<p align="justify">
+			Abstract: Kinematic analysis is a widely used method to assess stability condition in jointed rock slopes and predict the modes of block detachments. 
+			However, consideration of kinematic failures as crisp values (e.g., 0 for failure otherwise 1) in the conventional analysis is a limit to the susceptibility quantification. 
+			This paper has introduced novel methods based on the adjustment factors of slope mass rating (SMR) to quantify kinematic susceptibility of planar, wedge, and topple failure modes in terms of percentage/indices. 
+			Manual calculation of SMR is tedious and time-consuming, particularly when a large number of joints are involved. 
+			Hence, a method has been devised for the quantitative determination of both kinematic susceptibility and SMR with the help of a computer application. 
+			A computer application named EasySMR has been developed to automate and ease the calculation process. 
+			The application can incorporate a large number of joint data to provide convenient numeral, graphical and pie-chart interpretation of the kinematic susceptibility and SMR results. 
+			The algorithm has been validated with the results of 35 rock slopes from the Himalayan region, India. 
+			A few case studies have been presented to demonstrate the functionality of the program and enhanced capabilities which enables rigorous and accurate analysis of rock slope stability.
+			
+	
+			<br> Keywords: Computer application · Kinematic susceptibility · Slope mass rating · EasySMR
+			</p>
 
 			<p align="justify">
 			<h3> Continuous functions and a computer application for Rock Mass Rating </h3>
