--- a/research.html
+++ b/research.html
@@ -76,7 +76,9 @@
 			<br> <br>
 			<a href="https://www.dropbox.com/s/lemth5wzm0aat3v/QuickRMR_win.zip?dl=1"> Download QuickRMR </a>
 			<br> <br> 
-			<a href="https://www.dropbox.com/s/r15kvj4wy3dqy7c/EasySMR_win.exe?dl=1"> Download EasySMR </a>
+			<a href="https://link.springer.com/epdf/10.1007/s10064-021-02524-8?sharing_token=XHHlveN8YFvDziSMfEGaFfe4RwlQNchNByi7wbcMAY4UTOrRuw_Sk7b31BvNnQRKERjI8tjsFlfhKfpfSem96Jbbqy6n8nOLVnf5ex77O1sl-69QMsg0P4D4Ad-Wd--af-dP_NhU7d63zs_XbSjbRcrCullfSLsqzQk3hCeAtCI%3D"> Kundu et al. (2022) </a>
+			<br> <br> 
+			<a href="https://www.dropbox.com/s/kxrle2kqb1kf5ko/EasySMR_win.exe?dl=1"> Download EasySMR </a>
 			</p>
 
 		</div>
@@ -89,7 +91,8 @@
 			
 			<ul>
 			<h4> Articles in Journals </h4>
-				<li>Singh AK, Kundu J, Sarkar K, Verma HK, Singh PK (2021) Impact of rock block characteristics on rockfall hazard and its implications for rockfall protection strategies along Himalayan highways: A case study. Bulletin of Engineering Geology and the Environment. (Accepted)
+				<li>Kundu J, Sarkar K, Verma AK, Singh TN (2022) Novel methods for quantitative analysis of kinematic stability and slope mass rating in jointed rock slopes with the aid of a new computer application. Bull Eng Geol Environ 81, 29.
+				<li>Singh AK, Kundu J, Sarkar K, Verma HK, Singh PK (2021) Impact of rock block characteristics on rockfall hazard and its implications for rockfall protection strategies along Himalayan highways: A case study. Bull Eng Geol Environ 80, 5347–5368.
 				<li>Kundu, J., Sarkar, K., Singh, A.K., & Singh, T., 2020. Continuous functions and a computer application for rock mass rating. Int. J. Rock Mech. Min. Sci. 129. <br> <a href="https://authors.elsevier.com/c/1amX04sPjBg0DD"> Access here </a> <br> <br>
 				<li>Singh, A.K., Kundu, J., & Sarkar, K., 2018. Stability analysis of a recurring soil slope failure along NH-5, Himachal Himalaya, India. Nat. Hazards 90, 863–885.
 				<li>Kundu, J., Mahanta, B., Sarkar, K., & Singh, T.N., 2018. The Effect of Lineation on Anisotropy in Dry and Saturated Himalayan Schistose Rock Under Brazilian Test Conditions. Rock Mech. Rock Eng. 51, 5–21.
