--- a/easysmr.html
+++ b/easysmr.html
@@ -144,7 +144,7 @@
 			The below figure shows the EasySMR User Interface. <br> <br>
 			</p>			
 			
-			<img src = "EasySMR_UI.jpg" alt "EasySMR_UI" class="imgcenter">
+			<img src = "EasySMR_UI.JPG" alt "EasySMR_UI" class="imgcenter">
 			<p align = "center" class="caption">
 			User Interface of EasySMR </p>
 			
@@ -154,9 +154,16 @@
 			
 			</p>
 			
-			<img src = "EasySMR_Maximized_UI.jpg" alt "EasySMR_Maximized_UI" class="imgcenter">
+			<img src = "EasySMR_Maximized_UI.JPG" alt "EasySMR_Maximized_UI" class="imgcenter">
 			<p align = "center" class="caption"> User Interface of EasySMR maximized </p>
 			
+			<p align="justify">			
+			The joint/discontinuity data can be imported to EasySMR through from an MS-Excel sheet in dip and dip direction format as shown in below figure. <br> <br>
+			</p>			
+			
+			<img src = "EasySMR_format.JPG" alt "EasySMR_Excel" class="imgcenter">
+			<p align = "center" class="caption">
+			Data format in MS Excel Sheet that can be imported to EasySMR </p>
 			
 		<br> <br>Hope you enjoy using the software! I would love to receive your feedback at <a href=""> email@jkundu.com</a>. 
 				Your comments/suggestions are valuable to make it more convenient and error free.
