--- a/easysmr.html
+++ b/easysmr.html
@@ -133,7 +133,7 @@
 			<br> <br>
 			
 			Cite the article for the methods used in the software as: <br>
-			Kundu, J., Sarkar, K., Verma, A.K., & Singh, T.N. (Accepted for publication) Novel methods for quantitative analysis of kinematic stability and slope mass rating in jointed rock slopes with the aid of a new computer application. Bull Eng Geol Environ.
+			Kundu, J., Sarkar, K., Verma, A.K., & Singh, T.N. (2022) Novel methods for quantitative analysis of kinematic stability and slope mass rating in jointed rock slopes with the aid of a new computer application. Bull Eng Geol Environ. 81, 29.
 
 			</p>
 			
