--- a/research.html
+++ b/research.html
@@ -91,9 +91,9 @@
 			
 			<ul>
 			<h4> Articles in Journals </h4>
-				<li>Kundu J, Sarkar K, Verma AK, Singh TN (2022) Novel methods for quantitative analysis of kinematic stability and slope mass rating in jointed rock slopes with the aid of a new computer application. Bull Eng Geol Environ 81, 29.
-				<li>Singh AK, Kundu J, Sarkar K, Verma HK, Singh PK (2021) Impact of rock block characteristics on rockfall hazard and its implications for rockfall protection strategies along Himalayan highways: A case study. Bull Eng Geol Environ 80, 5347–5368.
-				<li>Kundu, J., Sarkar, K., Singh, A.K., & Singh, T., 2020. Continuous functions and a computer application for rock mass rating. Int. J. Rock Mech. Min. Sci. 129. <br> <a href="https://authors.elsevier.com/c/1amX04sPjBg0DD"> Access here </a> <br> <br>
+				<li>Kundu J, Sarkar K, Verma AK, Singh TN (2022) Novel methods for quantitative analysis of kinematic stability and slope mass rating in jointed rock slopes with the aid of a new computer application. Bull Eng Geol Environ. 81, 29.
+				<li>Singh AK, Kundu J, Sarkar K, Verma HK, Singh PK (2021) Impact of rock block characteristics on rockfall hazard and its implications for rockfall protection strategies along Himalayan highways: A case study. Bull Eng Geol Environ. 80, 5347–5368.
+				<li>Kundu, J., Sarkar, K., Singh, A.K., & Singh, TN, 2020. Continuous functions and a computer application for rock mass rating. Int. J. Rock Mech. Min. Sci. 129. <br> <a href="https://authors.elsevier.com/c/1amX04sPjBg0DD"> Access here </a> <br> <br>
 				<li>Singh, A.K., Kundu, J., & Sarkar, K., 2018. Stability analysis of a recurring soil slope failure along NH-5, Himachal Himalaya, India. Nat. Hazards 90, 863–885.
 				<li>Kundu, J., Mahanta, B., Sarkar, K., & Singh, T.N., 2018. The Effect of Lineation on Anisotropy in Dry and Saturated Himalayan Schistose Rock Under Brazilian Test Conditions. Rock Mech. Rock Eng. 51, 5–21.
 				<li>Kundu, J., Sarkar, K., Singh, P.K., & Singh, T.N., 2018. Deterministic and Probabilistic Stability Analysis of Soil Slope – A Case Study. J. Geol. Soc. India 91, 418–424.
