--- a/easysmr.html
+++ b/easysmr.html
@@ -161,7 +161,7 @@
 			The joint/discontinuity data can be imported to EasySMR through from an MS-Excel sheet in dip and dip direction format as shown in below figure. <br> <br>
 			</p>			
 			
-			<img src = "EasySMR_format.JPG" alt "EasySMR_Excel" class="imgcenter">
+			<img src = "EasySMR_format1.JPG" alt "EasySMR_Excel" class="imgcenter">
 			<p align = "center" class="caption">
 			Data format in MS Excel Sheet that can be imported to EasySMR </p>
 			
